[project]
name = "some-option"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "build>=1.2.2.post1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"